--- a/makemenu/templates/makemenu/dishtypes_list.html
+++ b/makemenu/templates/makemenu/dishtypes_list.html
@@ -11,6 +11,6 @@
         <a href="{% url 'makemenu:dishes' dishType.id %}">{{ dishType }}</a><br>
     {% endfor %}
 </ul>
-
+<a href="{% url 'makemenu:most_nourishing' %}">Самый сытный вариант</a>
 </body>
 </html>
